Sun Dec 25 22:39:49 2011  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb (_run_parallel):
	  New option "--separate" for test/unit; when running tests with this
	  option, a job process will be restarted after one testcase has done.
	  This means all testcases will run with separated process.

	* lib/test/unit/parallel.rb: Fix for above. Now parallel.rb puts
	  "ready!" for first ready, "ready" for afters.

Sun Dec 25 00:02:15 2011  Luis Lavena  <luislavena@gmail.com>

	* configure.in: change --with-ntver to --with-winnt-ver to be more
	  descriptive in the context. [ruby-core:41794]

Sat Dec 24 23:25:15 2011  Luis Lavena  <luislavena@gmail.com>

	* configure.in: add --with-ntver option to match win32/configure.bat
	  functionality. Set 0x0501 as default. [ruby-core:35010]
	  [ruby-core:35035]

Sat Dec 24 12:38:53 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (proc_call): get rid of optimazation-out by clang.

	* proc.c (rb_proc_call, rb_proc_call_with_block): ditto.

Sat Dec 24 10:56:32 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/readline/readline.c (readline_readline): check if outstream
	  is closed to get rid of a bug of readline 6.  [ruby-dev:45043]
	  [Bug #5803]

Sat Dec 24 06:59:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/readline/test_readline.rb (test_line_buffer__point): use
	  lambda not to exit entire method by "return".  or "next" for
	  proc.  [ruby-dev:45042] [Bug #5802]

Sat Dec 24 01:20:39 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_eval.c (send_internal): PASS_PASSED_BLOCK_TH must be placed
	  just before calling rb_call0.

	* bootstraptest/test_flow.rb: add a test for above.

Sat Dec 24 00:55:16 2011  Tanaka Akira  <akr@fsij.org>

	* lib/tempfile.rb (Tempfile#initialize): warn if a block is given.

Fri Dec 23 16:14:30 2011  TAKAO Kouji  <kouji@takao7.net>

	* ext/readline/readline.c (readline_attempted_completion_function):
	  in Readline module with GNU Readline 6 case, Readline module